--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-title:            Site Title
-description:      Describe your website.
+title:            CodeNugget
+description:      Let's try this blog thing one more time.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://localdocker:4000
 disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Your Name
-  avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  name:           Pascal Cremer
+  avatar:         avatar.png
+  bio:            "Passionate about coding, workflow automation, electronic music and drunk Djing."
+  email:          b00gizm@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:
+  twitter:        b00gizm
   facebook:
-  github:
+  github:         b00gizm
   stackoverflow:
   linkedin:
-  instagram:
+  instagram:      b00gizm
   lastfm:
   tumblr:
   pinterest:
@@ -39,17 +39,12 @@ links:
     url: /about/
   - title: Posts
     url: /posts/
-  - title: Theme Setup
-    url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
-    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Berlin
 future:      true
 pygments:    true
-#highlighter: pygments
+highlighter: pygments
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
